syntax = "proto3";
package backstage;

option go_package="gitlab.initcapp.com/gaming/ptgame_protobuf/gen/lobby/backstage";

// rpc serice for room
service RoomService {
    // CreateRoom use when admin/backstage create new room,
    // should pass room data to lobby for lobby create own room cache
    rpc CreateRoom(RoomRequest) returns (RoomResponse) {};
    // UpdateRoom use when admin/backstage update room,
    // Should pass room data to lobby for lobby replace own room cache,
    rpc UpdateRoom(RoomRequest) returns (RoomResponse) {};
    // DeleteRoom use when admin/backstage delete a room,
    // should pass room id to lobby for lobby delete from own room cache
    rpc DeleteRoom(DeleteRoomRequest) returns (RoomResponse) {};
}

message RoomRequest {
    uint32 id = 1;
    uint32 gameId = 2;
    string name=3;
    string coverImg=4;
    string videoUrl=5;
    string desc=6;
    uint32 sort = 7;
    uint32 status = 8;
}

message DeleteRoomRequest {
    uint32 id = 1;
}

//RoomResponse will response id while it operate success
message RoomResponse {
    uint32 id = 1;
}